[tool.poetry]
name = "small-python-projects"
version = "0.1.0"
description = ""
authors = ["Hannes Aronsson <hannes.aronsson@scania.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
streamlit = "^1.28.2"
polars = "^0.19.13"
plotly = "^5.18.0"
xlsx2csv = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
